--- a/ui/src/app/views/settings/workflow-template/editor/workflow-template.editor.html
+++ b/ui/src/app/views/settings/workflow-template/editor/workflow-template.editor.html
@@ -1,6 +1,6 @@
 <codemirror #code class="code" [ngModel]="value" [config]="codeMirrorConfig" (change)="valueChange($event)">
 </codemirror>
-<button *ngIf="editable && removable" class="codeButton ui icon red button" (click)="clickRemove()">
-  <i class="trash icon"></i>
+<button nz-button nzDanger nzType="primary" *ngIf="editable && removable" class="codeButton" (click)="clickRemove()">
+    <i nz-icon nzType="delete" nzTheme="outline"></i>
 </button>
-<div *ngIf="this.error" class="ui red message">{{this.error.message}}</div>
+<nz-alert *ngIf="this.error" nzType="error" [nzMessage]="this.error.message"></nz-alert>
