--- a/ui/src/app/views/workflow/add/workflow.add.html
+++ b/ui/src/app/views/workflow/add/workflow.add.html
@@ -107,6 +107,117 @@
                                         </nz-form-item>
                                     </nz-col>
                                 </nz-row>
+
+                                <nz-row *ngIf="creationMode === 'repository'">
+                                    <nz-col [nzSpan]="20" [nzOffset]="2">
+                                        <ng-container *ngIf="!asCodeResult">
+                                            <nz-row>
+                                                <nz-col [nzSpan]="10">
+                                                    <nz-form-item>
+                                                        <nz-form-label>{{ 'workflow_wizard_select_repo_man' | translate}}</nz-form-label>
+                                                        <nz-form-control>
+                                                            <nz-select nzShowSearch name="repoman"
+                                                                       [(ngModel)]="selectedRepoManager" (ngModelChange)="fetchRepos($event)">
+                                                                <nz-option
+                                                                        *ngFor="let vcs of project.vcs_servers" [nzValue]="vcs.name"
+                                                                        [nzLabel]="vcs.name">
+                                                                </nz-option>
+                                                            </nz-select>
+                                                        </nz-form-control>
+                                                    </nz-form-item>
+                                                </nz-col>
+                                                <nz-col [nzSpan]="10" [nzOffset]="2">
+                                                    <nz-form-item>
+                                                        <nz-form-label>Or add a repository manager</nz-form-label>
+                                                        <nz-form-control>
+                                                            <app-repomanager-form [project]="project" [disableLabel]="true"></app-repomanager-form>
+                                                        </nz-form-control>
+                                                    </nz-form-item>
+                                                </nz-col>
+                                            </nz-row>
+                                            <nz-row *ngIf="selectedRepoManager">
+                                                <nz-col [nzSpan]="20">
+                                                    <nz-form-item>
+                                                        <nz-form-control>
+                                                            <nz-alert *ngIf="loadingRepo" nzType="info" nzMessage="Loading..."></nz-alert>
+                                                            <ng-container *ngIf="!loadingRepo">
+                                                                <nz-select class="selection" name="repo" nzShowSearch nzPlaceHolder="Select a repository"
+                                                                           [(ngModel)]="selectedRepo"
+                                                                (nzOnSearch)="filterRepo($event)">
+                                                                    <nz-option *ngFor="let r of filteredRepos; trackBy: trackRepo"
+                                                                               [nzValue]="r" [nzLabel]="r.fullname"></nz-option>
+                                                                </nz-select>
+                                                            </ng-container>
+                                                        </nz-form-control>
+                                                    </nz-form-item>
+                                                </nz-col>
+                                                <nz-col [nzSpan]="2" [nzOffset]="2">
+                                                    <nz-form-item>
+                                                        <button nz-button nzType="primary" name="resync"
+                                                                type="button" [nzLoading]="loading"
+                                                                [disabled]="loading" (click)="resyncRepos()">
+                                                            Resynchronize
+                                                        </button>
+                                                    </nz-form-item>
+
+                                                </nz-col>
+                                            </nz-row>
+                                            <nz-row *ngIf="selectedRepo">
+                                                <nz-col [nzSpan]="24">
+                                                    <app-vcs-strategy [project]="project"
+                                                                      [withoutForm]="true"
+                                                                          [(strategy)]="selectedStrategy" [createOnProject]="true"
+                                                                          (strategyChange)="createWorkflowFromRepo()"
+                                                                          [sshWarning]="true" [projectKeysOnly]="true"
+                                                                          [hideButton]="true">
+                                                    </app-vcs-strategy>
+                                                </nz-col>
+                                            </nz-row>
+                                            <nz-row  *ngIf="!pollingResponse && selectedRepo ||
+                                                            (selectedRepo && pollingResponse?.error_details?.message !== '')">
+                                                <nz-col [nzSpan]="2" [nzOffset]="22">
+                                                    <button nz-button nzType="primary" type="button"
+                                                            [nzLoading]="loading || pollingImport" [disabled]="loading"
+                                                            (click)="createWorkflowFromRepo()">Inspect repository
+                                                    </button>
+                                                </nz-col>
+                                            </nz-row>
+                                            <nz-row *ngIf="pollingResponse">
+                                                <nz-col [nzSpan]="24" *ngIf="pollingResponse.status === 3 && !loading">
+                                                    <nz-alert nzType="error" nzMessage="{{pollingResponse.error_details.message}} - {{pollingResponse.error_details.from}}"></nz-alert>
+                                                </nz-col>
+                                                <nz-col [nzSpan]="24" *ngIf="pollingResponse.load_files && pollingResponse.load_files.results">
+                                                    {{ 'wizard_repo_files' | translate}}
+                                                    <ul>
+                                                        <li
+                                                                *ngFor="let f of pollingResponse.load_files.results | keys">
+                                                            {{f}}
+                                                        </li>
+                                                    </ul>
+                                                </nz-col>
+                                                <nz-col [nzSpan]="2" [nzOffset]="22"  *ngIf="pollingResponse.status === 2">
+                                                    <button nz-button nzType="primary" type="button"
+                                                            [nzLoading]="loading" [disabled]="loading"
+                                                            (click)="perform()">Create workflow
+                                                    </button>
+                                                </nz-col>
+                                            </nz-row>
+                                        </ng-container>
+                                        <ng-container *ngIf="asCodeResult">
+                                            <nz-row>
+                                                <nz-col [nzSpan]="20">
+                                                    <ul>
+                                                        <li *ngFor="let s of asCodeResult.msgs">{{s}}</li>
+                                                    </ul>
+                                                </nz-col>
+                                                <nz-col [nzSpan]="2">
+                                                    <button nz-button nzType="primary" type="button"
+                                                            (click)="goToWorkflow()">{{ 'btn_goto_workflow' | translate}}</button>
+                                                </nz-col>
+                                            </nz-row>
+                                        </ng-container>
+                                    </nz-col>
+                                </nz-row>
                             </div>
 
 
@@ -115,116 +226,8 @@
                                     <div class="ui row">
                                         <div class="one wide column"></div>
 
-                                        <div class="fourteen wide column" *ngIf="creationMode === 'repository'">
-                                            <ng-container *ngIf="!asCodeResult">
-                                                <div class="ui fields">
-                                                    <div class="ui eight wide field">
-                                                        <label>{{ 'workflow_wizard_select_repo_man' |
-                                                            translate}}</label>
-                                                        <sui-select class="selection" name="repoman"
-                                                                    [(ngModel)]="selectedRepoManager"
-                                                                    (selectedOptionChange)="fetchRepos($event)"
-                                                                    [options]="project.vcs_servers"
-                                                                    [isSearchable]="true" #select>
-                                                            <sui-select-option
-                                                                    *ngFor="let vcs of select.filteredOptions"
-                                                                    [value]="vcs.name">
-                                                            </sui-select-option>
-                                                        </sui-select>
-                                                    </div>
-                                                    <div class="ui eight wide field">
-                                                        <label>{{ 'workflow_wizard_select_repo_man_add' |
-                                                            translate}}</label>
-                                                        <app-repomanager-form [project]="project">
-                                                        </app-repomanager-form>
-                                                    </div>
-                                                </div>
-                                                <div class="ui fields" *ngIf="selectedRepoManager">
-                                                    <div class="ui eleven wide field">
-                                                        <label>{{ 'workflow_wizard_select_repo' | translate}}</label>
-                                                        <div class="ui info message" *ngIf="loadingRepo">
-                                                            {{'workflow_wizard_select_repo_loading' | translate
-                                                            }}
-                                                        </div>
-                                                        <ng-container *ngIf="!loadingRepo">
-                                                            <sui-select class="selection" name="repo"
-                                                                        [(ngModel)]="selectedRepo" [options]="repos"
-                                                                        [optionsFilter]="filterRepo"
-                                                                        labelField="fullname" [isSearchable]="true"
-                                                                        #repositorySelect>
-                                                                <sui-select-option
-                                                                        *ngFor="let r of repositorySelect.filteredOptions.slice(0, 100); trackBy: trackRepo"
-                                                                        [value]="r">
-                                                                </sui-select-option>
-                                                            </sui-select>
-                                                        </ng-container>
-                                                    </div>
-                                                    <div class="ui one wide field">
-                                                        <button class="ui blue button resync" name="resync"
-                                                                type="button" [class.loading]="loading"
-                                                                [disabled]="loading" (click)="resyncRepos()">
-                                                            {{'btn_resync_repo' | translate }}
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                                <div class="ui field" *ngIf="selectedRepo">
-                                                    <app-vcs-strategy [project]="project"
-                                                                      [(strategy)]="selectedStrategy" [createOnProject]="true"
-                                                                      (strategyChange)="createWorkflowFromRepo()"
-                                                                      [sshWarning]="true" [projectKeysOnly]="true"
-                                                                      [hideBranch]="true" [hideButton]="true">
-                                                    </app-vcs-strategy>
-                                                </div>
-                                                <div class="right aligned field"
-                                                     *ngIf="!pollingResponse && selectedRepo ||
-                                                            (selectedRepo && pollingResponse?.error_details?.message !== '')">
-                                                    <button class="ui green button" type="button"
-                                                            [class.loading]="loading" [disabled]="loading"
-                                                            (click)="createWorkflowFromRepo()">{{
-                                                        'btn_inspect_repo' | translate }}
-                                                    </button>
-                                                </div>
-                                                <div class="ui field" *ngIf="pollingResponse">
-                                                    <ng-container *ngIf="pollingImport">
-                                                        <div class="ui blue small active inline loader"></div>
-                                                        {{ 'workflow_wizard_repo_analyse' | translate }}
-                                                    </ng-container>
 
-                                                    <div class="ui error message"
-                                                         *ngIf="pollingResponse.status === 3 && !loading">
-                                                        {{pollingResponse.error_details.message}} - {{pollingResponse.error_details.from}}                                                            </div>
-                                                    <ng-container
-                                                            *ngIf="pollingResponse && pollingResponse.load_files && pollingResponse.load_files.results">
-                                                        {{ 'wizard_repo_files' | translate}}
-                                                        <ul>
-                                                            <li
-                                                                    *ngFor="let f of pollingResponse.load_files.results | keys">
-                                                                {{f}}
-                                                            </li>
-                                                        </ul>
-                                                    </ng-container>
 
-                                                    <div class="right aligned field"
-                                                         *ngIf="pollingResponse.status === 2">
-                                                        <button class="ui green button" type="button"
-                                                                [class.loading]="loading" [disabled]="loading"
-                                                                (click)="perform()">{{ 'btn_create_workflow' |
-                                                            translate }}
-                                                        </button>
-                                                    </div>
-                                                </div>
-                                            </ng-container>
-                                            <ng-container *ngIf="asCodeResult">
-                                                <ul>
-                                                    <li *ngFor="let s of asCodeResult.msgs">{{s}}</li>
-                                                </ul>
-                                                <div class="ui right aligned field">
-                                                    <button class="ui blue button" type="button"
-                                                            (click)="goToWorkflow()">{{
-                                                        'btn_goto_workflow' | translate}}</button>
-                                                </div>
-                                            </ng-container>
-                                        </div>
                                         <div class="fourteen wide column" *ngIf="creationMode === 'template'">
                                             <ng-container>
                                                 <div class="ui grid">
